syntax = "proto3";

option java_package = "org.pipelineframework.csv.grpc";

import "input_csv_file_processing_svc.proto";

message AckPaymentSent {
  string id = 1; // from BaseEntity
  string conversationId = 2;
  int64  status = 3; // Long
  string message = 4;
  string paymentRecordId = 5;
  PaymentRecord paymentRecord = 6;
}

message PaymentStatus {
  string id = 1; // from BaseEntity
  string reference = 2;
  string status = 3;
  string message = 4;
  string fee = 5; // BigDecimal
  string ackPaymentSentId = 6;
  AckPaymentSent ackPaymentSent = 7;
}

service SendPaymentRecordService {
  rpc remoteProcess(PaymentRecord) returns (AckPaymentSent);
}

service ProcessAckPaymentSentService {
  rpc remoteProcess(AckPaymentSent) returns (PaymentStatus);
}

service PollAckPaymentSentService {
  rpc remoteProcess(AckPaymentSent) returns (PaymentStatus);
}
